--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 .form{
   padding: 40px;
   border-radius: 10px;
-  background-color: rgb(241, 241, 241);
+  background-color: rgb(247, 247, 247);
   -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
   -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
   box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
@@ -37,10 +37,6 @@
   font-size: 12px;
   margin-bottom: 30px;
   margin-top: 3px;
-}
-
-.input-box input::placeholder {
-  color: white;
 }
 
 .login-button{
@@ -64,9 +60,8 @@
   padding-left: 20px;
   border-radius: 50px;
   border: none;
-  background-color: #aaaaaa;
+  background-color: #dddddd;
   box-shadow: inset 0px 1px 35px -10px rgba(99, 99, 99, 0.58);
-  color: white;
   font-size: 13px;
   font-weight: bold;
 }
@@ -80,20 +75,18 @@
 .messages{
   font-size: 12px;
   text-align: left;
-  background-color: rgba(255, 253, 247, 0.2) ;
-  padding: 10px;
+  background: rgb(233, 233, 233);
+  padding: 10px 20px;
   margin: 8px 0px;
-  width: 100%;
 }
 
-.messages:nth-child(even){
-  background-color: rgba(255, 253, 247, 0.2) ;
-}
 
 .uName{
   display: block;
-  color: rgb(255, 196, 0);
+  color: rgb(184, 3, 139);
   font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 3px;
 }
 
 .send-button {
@@ -111,7 +104,7 @@
   height: 80%;
   margin: 60px 0;
   padding: 35px;
-  background-color: rgb(28, 11, 68);
+  background-color: rgb(255, 255, 255);
   border-radius: 10px;
   display: flex;
   flex-flow: row wrap;
@@ -137,12 +130,13 @@
 }
 
 .textMessages{
-  color: rgb(255, 255, 255);
+  color: rgb(36, 36, 36);
 }
 
 .input-label, .input-label2{
   font-size: 11px;
   margin-top:-5px;
+  color: rgb(85, 3, 85);
 }
 
 .input-label2{
@@ -160,6 +154,7 @@
   text-align: left;
   margin-bottom: 10px;
   margin-top: 25px;
+  color: rgb(85, 3, 85);
 }
 
 .chat-input-container{
