--- a/src/App.css
+++ b/src/App.css
@@ -22,32 +22,44 @@
 .form{
   padding: 40px;
   border-radius: 10px;
+  height: 200px;
   background-color: rgb(247, 247, 247);
   -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
   -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
   box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  position: relative;
 }
 
-.form h3, .form h5{
+::placeholder{
+  color: rgba(50,22,82,1);
+  font-weight: normal;
+}
+
+.form h3{
   margin: 0;
-  color: rgb(43, 15, 88);
+  color: rgba(255,0,104,1);
 }
 
 .form h5{
   font-size: 12px;
   margin-bottom: 30px;
   margin-top: 3px;
+  color: #737373;
 }
 
 .login-button{
   padding: 8px;
   margin-top: 20px;
-  width: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50px;
   text-transform: uppercase;
-  background-color: orange;
+  background-color: rgba(255,0,104,1);
   border: none;
   color: white;
+  position: absolute;
+  bottom: -13%;
+  font-weight: 800;
 }
 
 .login-button:hover{
@@ -61,13 +73,12 @@
   border-radius: 50px;
   border: none;
   background-color: #dddddd;
-  box-shadow: inset 0px 1px 35px -10px rgba(99, 99, 99, 0.58);
   font-size: 13px;
   font-weight: bold;
 }
 
 .username{
-  margin-bottom: 5px;
+  margin: 5px 0;
   font-size: 10px;
   color: #737373;
 }
@@ -91,12 +102,20 @@
 
 .send-button {
   margin-bottom: 10px;
-  width: 20%;
-  height: 36.52px;
+  width: 60px;
+  height: 60px;
   border: none;
-  background-color: orange;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  background-color: rgb(214, 0, 86);
+  border-radius: 50%;
+  position: absolute;
+  top: -13px;
+  right: 0;
+  color: white;
+  font-weight: bold;
+}
+
+.send-button:hover{
+  cursor: pointer;
 }
 
 .chatbox{
@@ -120,7 +139,7 @@
 }
 
 .chat-input{
-  width: calc(79% - 10px);
+  width: calc(90% - 10px);
   height: 34.2px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -135,19 +154,18 @@
 
 .input-label, .input-label2{
   font-size: 11px;
-  margin-top:-5px;
+  margin-top:5px;
   color: rgb(85, 3, 85);
 }
 
 .input-label2{
-  right: 21%;
+  right: 10%;
   position: absolute;
   bottom: 0;
 }
 
 .text-counter{
   font-size: 10px;
-  padding-top: 5px;
 }
 
 .chatbox h5{
