--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@
   position: absolute;
   bottom: -13%;
   font-weight: 800;
+  box-shadow: 0px 8px 14px -2px rgba(0,0,0,0.31);
 }
 
 .login-button:hover{
@@ -89,6 +90,31 @@
   background: rgb(233, 233, 233);
   padding: 10px 20px;
   margin: 8px 0px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+  line-height: 17px;
+  width: 50%;
+  border-top-right-radius: 20px;
+}
+
+.user-messages{
+    font-size: 12px;
+    text-align: right;
+    background: rgb(255, 213, 213);
+    padding: 10px 20px;
+    margin: 8px 0px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    line-height: 17px;
+    width: 50%;
+    align-self: flex-end;
+    border-top-left-radius: 20px;
+}
+
+.user-messages .uName{
+  color: rgb(214, 0, 86);
 }
 
 
@@ -98,6 +124,7 @@
   font-weight: bold;
   font-size: 14px;
   margin-bottom: 3px;
+  margin-top: 0;
 }
 
 .send-button {
@@ -128,6 +155,9 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
 }
 
 .chat-form{
@@ -139,7 +169,7 @@
 }
 
 .chat-input{
-  width: calc(90% - 10px);
+  width: calc(95% - 10px);
   height: 34.2px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -150,6 +180,7 @@
 
 .textMessages{
   color: rgb(36, 36, 36);
+  margin: 0 0 3px 0;
 }
 
 .input-label, .input-label2{
@@ -171,18 +202,26 @@
 .chatbox h5{
   text-align: left;
   margin-bottom: 10px;
-  margin-top: 25px;
-  color: rgb(85, 3, 85);
+  margin-top: 5px;
+  color: rgb(214, 0, 86);
 }
 
 .chat-input-container{
-  margin: 0px;
+  padding-top: 20px;
   width: 100%;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 0 0 20px 20px;
+
 }
 
 .render-messages{
   width: 100%;
   overflow-y: auto;
   height: 80%;
+  display: flex;
+  flex-direction: column;
+  position : relative; 
+  bottom:0;
 }
 
