--- a/src/App.css
+++ b/src/App.css
@@ -78,10 +78,13 @@
   font-weight: bold;
 }
 
-.username{
-  margin: 5px 0;
+.warning{
+  margin-top: 5px 0;
   font-size: 10px;
   color: #737373;
+}
+.warning:first-of-type{
+  margin-top: 10px;
 }
 
 .messages{
@@ -96,6 +99,7 @@
   line-height: 17px;
   width: 50%;
   border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .user-messages{
@@ -111,6 +115,7 @@
     width: 50%;
     align-self: flex-end;
     border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .user-messages .uName{
@@ -147,6 +152,7 @@
 
 .chatbox{
   width: 80%;
+  max-width: 800px;
   height: 80%;
   margin: 60px 0;
   padding: 35px;
@@ -169,13 +175,17 @@
 }
 
 .chat-input{
-  width: calc(95% - 10px);
+  width: calc(82.3% - 10px);
   height: 34.2px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border: none;
   padding-left: 10px;
+  padding-right: 50px;
   background-color: #dddddd;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .textMessages{
