--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 .messages{
   font-size: 12px;
   text-align: left;
-  background: rgb(233, 233, 233);
+  background: rgb(241, 241, 241);
   padding: 10px 20px;
   margin: 8px 0px;
   overflow-wrap: break-word;
@@ -112,14 +112,13 @@
   hyphens: auto;
   line-height: 17px;
   width: 50%;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-radius: 0 20px 0 20px;
 }
 
 .user-messages{
     font-size: 12px;
     text-align: right;
-    background: rgb(255, 213, 213);
+    background: rgba(112, 51, 192, 0.2);
     padding: 10px 20px;
     margin: 8px 0px;
     overflow-wrap: break-word;
@@ -128,8 +127,7 @@
     line-height: 17px;
     width: 50%;
     align-self: flex-end;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-radius: 20px 0 20px 0;
 }
 
 .user-messages .uName{
@@ -192,8 +190,7 @@
 .chat-input{
   width: calc(87% - 10px);
   height: 34.2px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-radius: 5px 0 0 5px;
   border: none;
   padding-left: 10px;
   padding-right: 50px;
@@ -238,13 +235,13 @@
   padding-top: 20px;
   width: 100%;
   background-color: #f5f5f5;
-  border-radius: 0 0 20px 20px;
+  border-radius: 0 0 10px 10px;
   height: 13%;
 }
 
 .render-messages{
   overflow-y: auto;
-  height: 70%;
+  height: 74%;
   display: flex;
   flex-direction: column;
   position : relative; 
@@ -259,8 +256,7 @@
  flex-flow: row wrap;
  justify-content: space-between;
  background-color: #985da0;
- border-top-left-radius: 10px;
- border-top-right-radius: 10px;
+ border-radius: 10px 10px 0 0;
 }
 
 .close-button{
