--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 
 .App {
-  background: rgb(255,0,104);
-  background: linear-gradient(135deg, rgba(255,0,104,1) 0%, rgba(50,22,82,1) 100%);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,23 +18,48 @@
 }
 
 .form{
-  padding: 40px;
   border-radius: 10px;
-  height: 250px;
-  background-color: rgb(247, 247, 247);
+  height: 320px;
   -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
   -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
-  box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.31);
   display: flex;
   flex-flow: column wrap;
   position: relative;
   align-items: center;
+  width: 400px;
+  background-color: #f8f8f8;
+}
+
+.form-top{
+  height: 58%;
+  width: 100%;
+  background: rgb(255,0,104);
+  background: linear-gradient(135deg, rgba(255,0,104,1) 0%, rgba(50,22,82,1) 100%);
+  display: flex;
+  flex-flow: column wrap;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px 10px 0 0;
+}
+
+.form-bottom{
+  height: 40%;
+  width: 80%;
+  display: flex;
+  flex-flow: column wrap;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
 }
 
 .login-icon{
   position: absolute;
-  top: 30px;
-  left: 45%;
+  top: 20px;
+  left: 46%;
+  color: white;
 }
 
 ::placeholder{
@@ -45,16 +68,16 @@
 }
 
 .form h3{
-  margin-top: 45px;
+  margin-top: 55px;
   margin-bottom: 0;
-  color: #737373;
+  color: white;
 }
 
 .form h5{
   font-size: 12px;
   margin-bottom: 30px;
-  margin-top: 3px;
-  color: #999999;
+  margin-top: 5px;
+  color: #ff9900;
 }
 
 .login-button{
@@ -68,9 +91,9 @@
   border: none;
   color: white;
   position: absolute;
-  bottom: -13%;
+  bottom: -11%;
   font-weight: 800;
-  box-shadow: 0px 8px 14px -2px rgba(0,0,0,0.31);
+  box-shadow: 0px 8px 14px -2px rgba(0,0,0,0.21);
 }
 
 .login-button:hover{
@@ -83,7 +106,7 @@
   padding-left: 20px;
   border-radius: 50px;
   border: none;
-  background-color: #dddddd;
+  background-color: #e2e2e2;
   font-size: 13px;
   font-weight: bold;
 }
@@ -98,6 +121,11 @@
 }
 .warning:first-of-type{
   margin-top: 10px;
+  text-align: left;
+}
+
+.warning:last-child{
+  margin-bottom: 30px;
   text-align: left;
 }
 
@@ -118,7 +146,7 @@
 .user-messages{
     font-size: 12px;
     text-align: right;
-    background: rgba(253, 234, 252, 0.8);
+    background: rgba(253, 0, 104, 0.2);
     padding: 10px 20px;
     margin: 8px 0px;
     overflow-wrap: break-word;
@@ -165,8 +193,7 @@
 .chatbox{
   width: 80%;
   max-width: 800px;
-  height: 55%;
-  margin: 60px 0;
+  height: 70%;
   padding: 0px;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
@@ -223,11 +250,11 @@
 
 .profile h5{
   text-align: left;
-  margin: 5px 0 10px 45px;
+  margin: 0px 0 0px 45px;
   color: rgb(255, 255, 255);
   padding: 10px 20px;
   position: relative;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: normal;
 }
 
@@ -254,6 +281,7 @@
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
+ align-items: center;
  background-color: #985da0;
  border-radius: 10px 10px 0 0;
 }
@@ -278,5 +306,5 @@
   padding: 0;
   position: absolute;
   left: -20px;
-  top: 8px;
+  top: 4px;
 }
