--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,8 @@
   color: white;
   position: absolute;
   bottom: -12.5%;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   box-shadow: 0px 8px 14px -2px rgba(0,0,0,0.21);
 }
