--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 
+/* ===== GENERAL SETTINGS ===== */
 .App {
   height: 100vh;
   display: flex;
@@ -10,6 +11,13 @@
   text-align: center;
 
 }
+
+::placeholder{
+  color: rgba(50,22,82,1);
+  font-weight: normal;
+}
+
+/* ===== LOGIN PAGE ===== */
 
 .login-box, .form{
   display: flex;
@@ -62,13 +70,8 @@
   color: white;
 }
 
-::placeholder{
-  color: rgba(50,22,82,1);
-  font-weight: normal;
-}
-
 .form h3{
-  margin-top: 60px;
+  margin-top: 55px;
   margin-bottom: 0;
   color: white;
   font-family: 'Montserrat', sans-serif;
@@ -79,7 +82,7 @@
   font-size: 12px;
   margin-bottom: 30px;
   margin-top: 0px;
-  color: #ff9900;
+  color: #ffaf37;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -90,7 +93,7 @@
   height: 80px;
   border-radius: 50px;
   text-transform: uppercase;
-  background-color: rgba(255,0,104,1);
+  background: rgb(224, 0, 105);
   border: none;
   color: white;
   position: absolute;
@@ -135,6 +138,80 @@
   text-align: left;
 }
 
+/* ===== CHAT PAGE ===== */
+
+.chatbox{
+  width: 80%;
+  max-width: 800px;
+  height: 70%;
+  padding: 0px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+  box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+}
+
+.profile{
+  height: 9%;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  background: rgb(255,0,104);
+   background: linear-gradient(145deg, rgba(255,0,104,1) 0%, rgba(50,22,82,1) 100%);
+  border-radius: 10px 10px 0 0;
+ }
+
+ .profile h5{
+  text-align: left;
+  margin: 0px 0 0px 40px;
+  color: rgb(255, 255, 255);
+  padding: 10px 20px;
+  position: relative;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+
+}
+
+.close-button{
+  position: relative;
+  padding: 10px 20px;
+}
+
+.close-button:hover {
+  cursor: pointer;
+}
+
+.icons{
+  padding: 0;
+  position: absolute;
+  left: -15px;
+  top: 1px;
+}
+
+.profile-icon{
+  padding: 0;
+  position: absolute;
+  left: -15px;
+  top: 4px;
+}
+
+ .render-messages{
+  overflow-y: auto;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  position : relative; 
+  bottom:0;
+  padding: 0 20px;
+}
+
 .messages{
   font-size: 12px;
   text-align: left;
@@ -150,26 +227,18 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.user-messages{
-    font-size: 12px;
-    text-align: right;
-    background: rgba(253, 0, 104, 0.1);
-    padding: 10px 20px;
-    margin: 8px 0px;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    hyphens: auto;
-    line-height: 17px;
-    width: 50%;
-    align-self: flex-end;
-    border-radius: 20px 0 20px 0;
-    font-family: 'Open Sans', sans-serif;
+
+.messages.user{ 
+  text-align: left;
+  background: rgba(253, 0, 104, 0.1);
+  align-self: flex-end;
+  border-radius: 20px 0 20px 0;
 }
 
-.user-messages .uName{
+.messages.user .uName{
   color: rgb(214, 0, 86);
+  text-align: right;
 }
-
 
 .uName{
   display: block;
@@ -180,37 +249,15 @@
   margin-top: 0;
 }
 
-.send-button {
-  margin-bottom: 10px;
-  width: 50px;
-  height: 50px;
-  border: none;
-  background-color: rgb(214, 0, 86);
-  border-radius: 50%;
-  position: absolute;
-  top: -7px;
-  right: 4%;
-  color: white;
-  font-weight: bold;
+a {
+  color:rgb(0, 112, 216);
 }
 
-.send-button:hover{
-  cursor: pointer;
-}
-
-.chatbox{
-  width: 80%;
-  max-width: 800px;
-  height: 70%;
-  padding: 0px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  -webkit-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
-  -moz-box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
-  box-shadow: 0px 1px 26px -4px rgba(0,0,0,0.58);
+ .chat-input-container{
+  padding-top: 10px;
+  width: 100%;
+  border-radius: 0 0 10px 10px;
+  height: 13%;
 }
 
 .chat-form{
@@ -235,6 +282,24 @@
   hyphens: auto;
 }
 
+.send-button {
+  margin-bottom: 10px;
+  width: 50px;
+  height: 50px;
+  border: none;
+  background-color: rgb(214, 0, 86);
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  right: 4%;
+  color: white;
+  font-weight: bold;
+}
+
+.send-button:hover{
+  cursor: pointer;
+}
+
 .textMessages{
   color: rgb(36, 36, 36);
   margin: 5px 0 3px 0;
@@ -256,66 +321,15 @@
   font-size: 10px;
 }
 
-.profile h5{
-  text-align: left;
-  margin: 0px 0 0px 40px;
-  color: rgb(255, 255, 255);
-  padding: 10px 20px;
-  position: relative;
-  font-size: 16px;
-  font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
+@media only screen and (max-width: 1030px) {
+  .chatbox{
+    width: 100vw;
+    height: 100vh;
+  }
 
-}
+  .render-messages{
+    width: 94%;
+    padding: 0 20px 0 20px;
+  }
 
-.chat-input-container{
-  padding-top: 10px;
-  width: 100%;
-  border-radius: 0 0 10px 10px;
-  height: 13%;
-}
-
-.render-messages{
-  overflow-y: auto;
-  height: 75%;
-  display: flex;
-  flex-direction: column;
-  position : relative; 
-  bottom:0;
-  padding: 0 20px;
-}
-
-.profile{
- height: 9%;
- width: 100%;
- display: flex;
- flex-flow: row wrap;
- justify-content: space-between;
- align-items: center;
- background: rgb(255,0,104);
-  background: linear-gradient(145deg, rgba(255,0,104,1) 0%, rgba(50,22,82,1) 100%);
- border-radius: 10px 10px 0 0;
-}
-
-.close-button{
-  position: relative;
-  padding: 10px 20px;
-}
-
-.close-button:hover {
-  cursor: pointer;
-}
-
-.icons{
-  padding: 0;
-  position: absolute;
-  left: -15px;
-  top: 1px;
-}
-
-.profile-icon{
-  padding: 0;
-  position: absolute;
-  left: -15px;
-  top: 4px;
 }
